--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,41 @@
+@import url(https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  ul, ol {
+    list-style: revert;
+  }
+}
+
+body{
+  @apply min-h-screen bg-[#F6EDE7];
+}
+
+#handwritten {
+  line-height: 21px;
+  margin-top: 30px;
+  margin-left: 90px;
+  max-width: 405px;
+  padding: 29px 10px 20px 65px;
+  background-color: #fff;
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 59px, #abced4 59px, #abced4 61px, rgba(0, 0, 0, 0) 61px), linear-gradient(#e1e1e1 0.1em, rgba(0, 0, 0, 0) 0.1em);
+  background-size: 100% 1em;
+  font-size: 18px;
+  -moz-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  -webkit-transform: rotate(10deg);
+  transform: rotate(10deg);
+  -moz-box-shadow: #ccc 3px 3px 6px;
+  -webkit-box-shadow: #ccc 3px 3px 6px;
+  box-shadow: #ccc 3px 3px 6px;
+  font-family: "Annie Use Your Telescope";
+  font-weight: normal;
+  color: #777;
+}
+#handwritten em {
+  background-color: rgba(255, 247, 128, 0.7);
+  font-style: normal;
+}
