update recipes css module

--- a/styles/recipes.module.css
+++ b/styles/recipes.module.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope);
+
 .handwritten {
     line-height: 21px;
     margin-top: 30px;
