handle nav slide animation

--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -56,3 +56,18 @@
     transition-duration: .5s;
     transform: rotate(180deg);
   }
+
+  .navAnimation{
+    animation: slide 0.2s ease-in-out;
+  }
+  
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
